[tool.poetry]
name = "test_pandera"
version = "0.1.0"
description = ""
authors = ["Seth Stadick <sstadick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
pandera = {version = "^0.11.0", extras = ["mypy"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
